--- a/ERToGo/app/src/main/res/layout/self_diag_part.xml
+++ b/ERToGo/app/src/main/res/layout/self_diag_part.xml
@@ -21,7 +21,7 @@
         android:layout_width="327dp"
         android:layout_height="121dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="29dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:contentDescription="Displays Body part"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -43,9 +43,8 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="91dp"
-        android:layout_marginTop="20dp"
-        android:text="Click the picture to idicate where"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/BODY_PART_IMAGE" />
 
@@ -65,6 +64,7 @@
         android:layout_height="45dp"
         android:layout_marginStart="168dp"
         android:layout_marginTop="84dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@color/colorAccent" />
@@ -73,8 +73,7 @@
         android:id="@+id/switch_reoccuring"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Switch"
+        android:layout_marginStart="36dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -92,31 +91,52 @@
         android:id="@+id/textView5"
         android:layout_width="90dp"
         android:layout_height="21dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="28dp"
+        android:text="Intensity/Pain"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="90dp"
+        android:layout_height="21dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="28dp"
         android:text="Age"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch_reoccuring" />
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <EditText
-        android:id="@+id/editText"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="2dp"
+        android:id="@+id/age_text"
+        android:layout_width="85dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="120dp"
         android:ems="10"
         android:inputType="numberSigned"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
-        android:id="@+id/gotoSelfDiagFinal"
-        android:layout_width="wrap_content"
+        android:id="@+id/body_part_finish"
+        android:layout_width="204dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="28dp"
-        android:text="Next"
+        android:layout_marginEnd="76dp"
+        android:text="Confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="107dp"
+        android:layout_height="13dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        android:max="10"
+        android:progress="1"
+        app:layout_constraintStart_toEndOf="@+id/age_text"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 </android.support.constraint.ConstraintLayout>
