--- a/ERToGo/app/src/main/res/layout/self_diag.xml
+++ b/ERToGo/app/src/main/res/layout/self_diag.xml
@@ -84,7 +84,7 @@
         android:id="@+id/highlighted_part"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="49dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="465dp"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -105,8 +105,8 @@
         android:id="@+id/imageView2"
         android:layout_width="412dp"
         android:layout_height="62dp"
-        app:srcCompat="@android:color/holo_green_light"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="456dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:color/holo_green_light" />
 
 </android.support.constraint.ConstraintLayout>
