--- a/ERToGo/app/src/main/res/layout/activity_main.xml
+++ b/ERToGo/app/src/main/res/layout/activity_main.xml
@@ -14,18 +14,18 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="125dp"
         android:ems="10"
-        android:hint="Enter a personal number"
+        android:hint="Enter your Personal number"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="145dp"
+        android:layout_height="68dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="78dp"
+        android:layout_marginBottom="58dp"
         android:text="Next"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PhoneNumberEditText" />
