--- a/ERToGo/app/src/main/res/layout/activity_rooms_and_patients_queue.xml
+++ b/ERToGo/app/src/main/res/layout/activity_rooms_and_patients_queue.xml
@@ -7,59 +7,59 @@
     tools:context=".RoomsAndPatientsQueue">
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/ROOM1"
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/textView2"
         android:layout_marginTop="134dp"
-        android:gravity="center"
         android:background="#00FF00"
+        android:gravity="center"
 
         android:text="ROOM1" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/ROOM2"
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/textView2"
         android:layout_marginTop="202dp"
-        android:gravity="center"
         android:background="#00FF00"
+        android:gravity="center"
         android:text="ROOM2" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/ROOM3"
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/textView2"
         android:layout_marginBottom="193dp"
-        android:gravity="center"
         android:background="#00FF00"
+        android:gravity="center"
         android:text="ROOM3" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/ROOM4"
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/textView2"
         android:layout_marginBottom="119dp"
-        android:gravity="center"
         android:background="#00FF00"
+        android:gravity="center"
         android:text="ROOM4" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/ROOM5"
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/textView2"
         android:layout_marginBottom="48dp"
-        android:gravity="center"
         android:background="#00FF00"
+        android:gravity="center"
         android:text="ROOM5" />
 
     <TextView
@@ -84,6 +84,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
+        android:id="@+id/waiting_patients"
         android:layout_width="186dp"
         android:layout_height="327dp"
         android:layout_alignParentBottom="true"
@@ -92,17 +93,11 @@
         android:layout_marginStart="12dp">
 
         <LinearLayout
+            android:id="@+id/waiting_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="42dp"
-                android:background="#add8e6"
-                android:gravity="center"
-                android:text="EmergencyStatus" />
         </LinearLayout>
     </ScrollView>
 
