--- a/ERToGo/app/src/main/res/layout/self_diag_part.xml
+++ b/ERToGo/app/src/main/res/layout/self_diag_part.xml
@@ -75,10 +75,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/waiting_count" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/waiting_count"
         android:layout_width="90dp"
         android:layout_height="21dp"
         android:layout_marginStart="16dp"
@@ -94,7 +94,7 @@
         android:layout_marginStart="128dp"
         android:layout_marginTop="28dp"
         android:text="Intensity/Pain"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/waiting_count"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <TextView
@@ -104,7 +104,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:text="Age"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/waiting_count"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <EditText
