--- a/ERToGo/app/src/main/res/values/colors.xml
+++ b/ERToGo/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="colorAccent">#b8d13434</color>
     <color name="red">#ff0000</color>
 
+    <color name="Important">#f95f31</color>
+    <color name="Medium">#f9cd31</color>
+    <color name="Low">#31f93e</color>
+    <color name="grey">#919191</color>
+
 </resources>
