--- a/ERToGo/app/src/main/res/layout/activity_main.xml
+++ b/ERToGo/app/src/main/res/layout/activity_main.xml
@@ -55,4 +55,13 @@
         android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/NameEditText" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="69dp"
+        android:text="Login as a Doc" />
 </RelativeLayout>
