--- a/ERToGo/app/src/main/res/layout/self_diag_part.xml
+++ b/ERToGo/app/src/main/res/layout/self_diag_part.xml
@@ -124,7 +124,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="76dp"
+        android:background="#0000000000"
         android:text="Confirm"
+        android:textColor="#ffffffff"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -138,5 +141,15 @@
         android:progress="1"
         app:layout_constraintStart_toEndOf="@+id/age_text"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <ImageView
+        android:id="@+id/imageView4444"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:color/holo_orange_light" />
 
 </android.support.constraint.ConstraintLayout>
