--- a/ERToGo/app/src/main/res/layout/self_diag_part.xml
+++ b/ERToGo/app/src/main/res/layout/self_diag_part.xml
@@ -124,7 +124,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="76dp"
-        android:background="#0000000000"
+        android:background="#000000"
         android:text="Confirm"
         android:textColor="#ffffffff"
         android:textSize="24sp"
