--- a/ERToGo/app/src/main/res/layout/your_turn.xml
+++ b/ERToGo/app/src/main/res/layout/your_turn.xml
@@ -58,4 +58,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="102dp"
+        android:layout_height="122dp"
+        android:layout_marginStart="129dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+        app:srcCompat="@drawable/patient" />
+
 </android.support.constraint.ConstraintLayout>
