--- a/ERToGo/app/src/main/res/layout/activity_main.xml
+++ b/ERToGo/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="#000000"
-        android:text="Personall Login"
+        android:text="Personnel login"
         android:textColor="#ffffff"
         android:textSize="24sp" />
 
