--- a/ERToGo/app/src/main/res/layout/client.xml
+++ b/ERToGo/app/src/main/res/layout/client.xml
@@ -47,8 +47,10 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="367dp"
+        android:layout_width="403dp"
         android:layout_height="89dp"
+        android:layout_marginEnd="17dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="?android:attr/colorPressedHighlight" />
