--- a/ERToGo/app/src/main/res/layout/self_diag_part.xml
+++ b/ERToGo/app/src/main/res/layout/self_diag_part.xml
@@ -83,7 +83,7 @@
         android:layout_height="21dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
-        android:text="Reoccuring"
+        android:text="Recurring "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
@@ -93,7 +93,7 @@
         android:layout_height="21dp"
         android:layout_marginStart="128dp"
         android:layout_marginTop="28dp"
-        android:text="Intensity/Pain"
+        android:text="Pain intensity"
         app:layout_constraintStart_toEndOf="@+id/waiting_count"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
