--- a/ERToGo/app/src/main/res/layout/activity_main.xml
+++ b/ERToGo/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="4dp"
-        android:background="#000000"
+        android:background="@android:color/holo_orange_light"
         android:text="Next"
         android:textColor="#ffffff"
         android:textSize="24sp"
@@ -63,7 +63,7 @@
         android:layout_height="72dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="#000000"
+        android:background="@android:color/holo_orange_light"
         android:text="Personnel login"
         android:textColor="#ffffff"
         android:textSize="24sp" />
