--- a/ERToGo/app/src/main/res/layout/activity_rooms_and_patients_queue.xml
+++ b/ERToGo/app/src/main/res/layout/activity_rooms_and_patients_queue.xml
@@ -13,7 +13,7 @@
 
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/ROOM2"
-        android:layout_marginTop="135dp"
+        android:layout_marginTop="183dp"
         android:background="#00FF00"
         android:gravity="center"
         android:radius="10dp"
@@ -25,7 +25,7 @@
         android:layout_height="48dp"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/ROOM3"
-        android:layout_marginTop="195dp"
+        android:layout_marginTop="246dp"
         android:background="#00FF00"
         android:gravity="center"
         android:radius="10dp"
@@ -48,7 +48,7 @@
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/ROOM1"
+        android:layout_alignStart="@+id/ROOM3"
         android:layout_marginBottom="148dp"
         android:background="#00FF00"
         android:gravity="center"
@@ -60,7 +60,7 @@
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/ROOM1"
+        android:layout_alignStart="@+id/ROOM3"
         android:layout_marginBottom="84dp"
         android:background="#00FF00"
         android:gravity="center"
@@ -69,6 +69,14 @@
 
     <ImageView
         android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        app:srcCompat="@android:color/holo_orange_light" />
+
+    <ImageView
+        android:id="@+id/imageView13"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
@@ -80,10 +88,10 @@
         android:id="@+id/waiting_count"
         android:layout_width="81dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_alignEnd="@+id/ROOM1"
         android:layout_alignTop="@+id/textView9"
-        android:layout_marginEnd="64dp"
         android:text="0"
+        android:textColor="#ffffff"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -92,30 +100,21 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/waiting_patients"
-        android:layout_marginBottom="13dp"
+        android:layout_alignTop="@+id/auto_alloc"
         android:text="Patients waiting:"
+        android:textColor="#ffffff"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="38dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/waiting_count"
-        android:layout_marginEnd="132dp"
-        app:layout_constraintStart_toEndOf="@+id/waiting_count"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:id="@+id/waiting_patients"
         android:layout_width="186dp"
-        android:layout_height="327dp"
+        android:layout_height="346dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
+        android:layout_marginBottom="69dp"
         android:layout_marginStart="22dp">
 
         <LinearLayout
@@ -134,23 +133,46 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="12dp"
-        android:text="Automatically Allocate: OFF" />
+        android:text="Automatically Allocate: OFF"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/sorter"
         android:layout_alignStart="@+id/ROOM1"
-        android:layout_alignTop="@+id/waiting_patients"
         android:text="ROOM NR"
         android:textSize="18sp" />
 
     <Button
         android:id="@+id/gotoStatistics"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:text="Statistics" />
+        android:layout_marginStart="-86dp"
+        android:layout_toEndOf="@+id/textView6"
+        android:background="@android:color/holo_orange_light"
+        android:text="Statistics"
+        android:textColor="#ffffff"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/waiting_patients"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="42dp"
+        android:text="Sort by" />
+
+    <Spinner
+        android:id="@+id/sorter"
+        android:layout_width="92dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/waiting_patients"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="97dp"
+        android:entries="@array/sort" />
 
 </RelativeLayout>
