--- a/ERToGo/app/src/main/res/layout/activity_main.xml
+++ b/ERToGo/app/src/main/res/layout/activity_main.xml
@@ -84,4 +84,15 @@
         android:layout_alignParentStart="true"
         app:srcCompat="@android:color/holo_orange_light" />
 
+    <Button
+        android:id="@+id/creditsBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="85dp"
+        android:layout_marginEnd="15dp"
+        android:background="#ffffff"
+        android:text="Credits" />
+
 </RelativeLayout>
