--- a/ERToGo/app/src/main/res/layout/activity_main.xml
+++ b/ERToGo/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/mainscreen"
     tools:context=".MainActivity">
 
     <EditText
