--- a/ERToGo/app/src/main/res/layout/activity_main.xml
+++ b/ERToGo/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_above="@+id/NameEditText"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:hint="Enter your Personal number"
+        android:hint="Personal number"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +40,7 @@
         android:layout_above="@+id/PhoneNumberEditText"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:hint="Enter your name"
+        android:hint="Name"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PersonalNumberEditText" />
@@ -53,7 +53,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="152dp"
         android:ems="10"
-        android:hint="Enter your phone number"
+        android:hint="Phone number"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/NameEditText" />
@@ -95,5 +95,16 @@
         android:layout_marginEnd="15dp"
         android:background="#ffffff"
         android:text="Credits" />
+
+    <TextView
+        android:id="@+id/textView35"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="125dp"
+        android:layout_marginTop="144dp"
+        android:text="Register"
+        android:textSize="24sp" />
 
 </RelativeLayout>
