--- a/ERToGo/app/src/main/res/layout/self_diag_part.xml
+++ b/ERToGo/app/src/main/res/layout/self_diag_part.xml
@@ -33,8 +33,8 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="28dp"
         android:text="Category of Injury"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/BODY_PART_IMAGE" />
@@ -50,10 +50,10 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="372dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="5dp"
+        android:layout_width="233dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="16dp"
         android:entries="@array/injuries"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -74,6 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/waiting_count" />
 
@@ -81,19 +82,19 @@
         android:id="@+id/waiting_count"
         android:layout_width="90dp"
         android:layout_height="21dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="152dp"
         android:text="Recurring "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="90dp"
-        android:layout_height="21dp"
+        android:layout_width="102dp"
+        android:layout_height="25dp"
         android:layout_marginStart="128dp"
-        android:layout_marginTop="28dp"
-        android:text="Pain intensity"
+        android:layout_marginTop="152dp"
+        android:text="Pain / intensity"
         app:layout_constraintStart_toEndOf="@+id/waiting_count"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
@@ -101,8 +102,8 @@
         android:id="@+id/textView7"
         android:layout_width="90dp"
         android:layout_height="21dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="152dp"
         android:text="Age"
         app:layout_constraintStart_toEndOf="@+id/waiting_count"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
@@ -112,6 +113,7 @@
         android:layout_width="85dp"
         android:layout_height="34dp"
         android:layout_marginStart="120dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:inputType="numberSigned"
         android:textSize="14sp"
@@ -120,10 +122,8 @@
 
     <Button
         android:id="@+id/body_part_finish"
-        android:layout_width="324dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="369dp"
+        android:layout_height="76dp"
         android:background="@android:color/holo_orange_light"
         android:text="Confirm"
         android:textColor="#ffffffff"
@@ -136,7 +136,7 @@
         android:layout_width="107dp"
         android:layout_height="13dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:max="10"
         android:progress="1"
         app:layout_constraintStart_toEndOf="@+id/age_text"
@@ -151,5 +151,25 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:color/holo_orange_light" />
+
+    <ProgressBar
+        android:id="@+id/api_loading2"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="288dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/fetched2"
+        android:layout_width="175dp"
+        android:layout_height="81dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
 </android.support.constraint.ConstraintLayout>
